Fixed content spacing

--- a/_sass/_content.scss
+++ b/_sass/_content.scss
@@ -2,6 +2,7 @@
     margin-top: 4.5rem;
     display: flex;
     flex-wrap: wrap;
+    margin-bottom: 2.4rem;
 }
 
 .side_bar {
